[package]
name = "omni_buffer"
version = "0.1.0"
authors = [ "Perry Birch" ]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/omnivers3/buffer"

[dependencies]
arrayref = "0.3.7"
log = "0.4.20"
memsec = "0.6.3"

[lib]
name = "omni_buffer"
src = "./src/lib.rs"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.10.1"